--- a/web-gl/package.json
+++ b/web-gl/package.json
@@ -27,5 +27,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"gl-matrix": "^3.4.3",
+		"sass": "^1.63.4"
+	}
 }
